Fix amplify.yml for root level project

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,16 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
-        # Install Flutter
-        - curl -O https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.24.0-stable.tar.xz
-        - tar xf flutter_linux_3.24.0-stable.tar.xz
+        - git clone https://github.com/flutter/flutter.git -b stable --depth 1
         - export PATH="$PATH:`pwd`/flutter/bin"
+        - flutter precache
         - flutter --version
         - flutter pub get
     build:
       commands:
         - export PATH="$PATH:`pwd`/flutter/bin"
-        - flutter build web --release --web-renderer canvaskit
+        - flutter build web --release
   artifacts:
     baseDirectory: build/web
     files:
